cardslider size bug correction on tablet mobile

--- a/src/components/CardsComponents/CardFullPopup/CardFullPopup.scss
+++ b/src/components/CardsComponents/CardFullPopup/CardFullPopup.scss
@@ -318,6 +318,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        min-height: unset;
+        min-width: unset;
       }
     }
     .CardSlider {
