--- a/src/components/CardsComponents/CardSlider/CardSlider.scss
+++ b/src/components/CardsComponents/CardSlider/CardSlider.scss
@@ -148,26 +148,9 @@
 @media screen and (max-width: $bp-tablet) {
   .CardSlider {
     .glide {
-      // width: 100%;
-      // height: auto;
-
-      // &__slide {
-      //   width: 100%;
-
-      //   & > img {
-      //     width: 100%;
-      //     height: auto;
-      //   }
-      // }
-      // &__arrows {
-      //   display: none;
-      // }
-      // &__track {
-      //   height: 100%;
-      // }
-      // &__slides {
-      //   height: 100%;
-      // }
+      &__arrows {
+        display: none;
+      }
     }
 
     &__close {
@@ -191,11 +174,17 @@
     }
   }
 
-  @media screen and (max-width: $bp-tablet) {
+  @media screen and (max-width: $bp-phone) {
     .CardSlider {
       .glide {
-        &__arrows {
-          display: none;
+        height: auto;
+        max-height: 70vh;
+
+        &__slide {
+          & > img {
+            width: 100%;
+            height: auto;
+          }
         }
       }
     }
