--- a/src/variables.scss
+++ b/src/variables.scss
@@ -44,8 +44,8 @@ $inner-component-padding: 0 14vw;
 $grid-component-padding: 0 14vw;
 $inner-component-padding-tablet: 0 8vw;
 $grid-component-padding-tablet: 0 8vw;
-$inner-component-padding-phone: 0 5rem;
-$grid-component-padding-phone: 0 5rem;
+$inner-component-padding-phone: 0 2rem;
+$grid-component-padding-phone: 0 2rem;
 
 // Breakpoints
 $bp-big: 1260px;
